# SQParametricPerson

./: CMakeLists.txt  README.md
src/DataLoader/: DataLoader.cpp  DataLoader.h
src/Kinectv2/: Kinectv2.cpp  Kinectv2.h
src/Main/: Header.h  Source.cpp  mainEngine.cpp  mainEngine.h
src/SemanticSegmentation/: SemanticSegmentation.cpp  SemanticSegmentation.h
src/Superquadrics/: Superquadrics.cpp  Superquadrics.h
src/Superquadrics/modules/: fit_RtSQ_ceres.h  fit_RtSQ_ceres_base.h  fit_superquadric_ceres.h  superquadric_formulas.h
src/Superquadrics/modules/impl/: fit_RtSQ_ceres.hpp  fit_RtSQ_ceres_base.hpp  fit_superquadric_ceres.hpp  superquadric_formulas.hpp
src/Utils/: Utils.hpp
src/Visualization/: Visualization.cpp  Visualization.h
